feat: auto dark mode, overwrite PATH env, additional log file for application debugging